--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todolist",
+  "homepage": "https://bogdan-mykhailov.github.io/myTodolist/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -37,7 +38,9 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "jest:integration": "jest -c integration/jest.config.js",
-    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
+    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -78,6 +81,7 @@
     "@storybook/preset-create-react-app": "^4.1.0",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
+    "gh-pages": "^4.0.0",
     "jest-image-snapshot": "^4.5.1",
     "jest-puppeteer": "^6.1.0",
     "puppeteer": "^13.6.0",
